EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/30/2009==
Derision: Fix for mobs in pathing enabled zones fleeing at low health at full run speed.

==06/29/2009==
Derision: Fixed a pathing bug relating to nodes incorrectly culled from the front of a path.
KLS: Reworked bind code a bit.
KLS: Pets no longer get client war/berserker crit bonuses.

==06/28/2009==
Derision: Began work on pathfinding for aggro/fear and Find NPC.

The path files for the first few zones can be found at http://code.google.com/p/projecteqemu/downloads/list
Put the .path files in your Maps directory with your .map and .wtr files.

Optional SQL:

utils/sql/svn/721_pathing_rules.sql

==06/27/2009==
KLS: Specialization should now never increase the amount of mana it takes to cast a spell.
KLS: Fix for mana preservation focus not functioning correctly.
KLS: Fix for duration enhancement focus effects not affecting detrimental spells.
KLS: Fix for summoning focus not reducing the cast time of nec/beast pets serverside.
KLS: Insufficient mana serverside check will now be before any modifiers instead of after, if you don't have enough mana in your mana pool to cast a spell after modifiers but do before modifiers the spell will cost your entire mana pool.
KLS: Added new npc code 'g', lets npcs resist spells by casters that are not in melee range.
WildcardX: More code migration from EQBOTS to BOTS.

==06/26/2009==
Trevius: SoF - Tradeskill containers within a character inventory can now combine recipes.
Trevius: SoF - Items with Recast Delays no longer appear as greyed out.
KLS: More changes to archery damage.

==06/25/2009==
Trevius: Structure work for Player Profile Recast Timers and Illusions in 6.2 Client.

==06/24/2009==
Trevius: #wc (wearchange) as well as all of the facial feature commands will now retain armor tint when used.
Trevius: Using #wc now makes temporary changes visible by all clients.